--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -44,7 +44,7 @@ jobs:
           cli_config_credentials_hostname: 'app.terraform.io'
           cli_config_credentials_token: ${{ secrets.TFC_TOKEN }}
           terraform_version: 1.0.11
-          terraform_wrapper: true
+          terraform_wrapper: false
 
       - name: Configure Terraform Backend
         id: backend-config
@@ -154,7 +154,7 @@ jobs:
           cli_config_credentials_hostname: 'app.terraform.io'
           cli_config_credentials_token: ${{ secrets.TFC_TOKEN }}
           terraform_version: 1.0.11
-          terraform_wrapper: true
+          terraform_wrapper: false
 
       - name: Configure Terraform Backend
         id: backend-config
@@ -265,7 +265,7 @@ jobs:
           cli_config_credentials_hostname: 'app.terraform.io'
           cli_config_credentials_token: ${{ secrets.TFC_TOKEN }}
           terraform_version: 1.0.11
-          terraform_wrapper: true
+          terraform_wrapper: false
 
       - name: Configure Terraform Backend
         id: backend-config
