--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -61,7 +61,7 @@ jobs:
           cli_config_credentials_hostname: 'app.terraform.io'
           cli_config_credentials_token: ${{ secrets.TFC_TOKEN }}
           terraform_version: 1.0.11
-          terraform_wrapper: true
+          terraform_wrapper: false
 
       - name: Configure Terraform Backend
         id: backend-config
@@ -290,7 +290,7 @@ jobs:
           cli_config_credentials_hostname: 'app.terraform.io'
           cli_config_credentials_token: ${{ secrets.TFC_TOKEN }}
           terraform_version: 1.0.11
-          terraform_wrapper: true
+          terraform_wrapper: false
 
       - name: Configure Terraform Backend
         id: backend-config
@@ -552,7 +552,7 @@ jobs:
           cli_config_credentials_hostname: 'app.terraform.io'
           cli_config_credentials_token: ${{ secrets.TFC_TOKEN }}
           terraform_version: 1.0.11
-          terraform_wrapper: true
+          terraform_wrapper: false
 
       - name: Configure Terraform Backend
         id: backend-config
@@ -817,7 +817,7 @@ jobs:
           cli_config_credentials_hostname: 'app.terraform.io'
           cli_config_credentials_token: ${{ secrets.TFC_TOKEN }}
           terraform_version: 1.0.11
-          terraform_wrapper: true
+          terraform_wrapper: false
 
       - name: Configure Terraform Backend
         id: backend-config
@@ -971,7 +971,7 @@ jobs:
           cli_config_credentials_hostname: 'app.terraform.io'
           cli_config_credentials_token: ${{ secrets.TFC_TOKEN }}
           terraform_version: 1.0.11
-          terraform_wrapper: true
+          terraform_wrapper: false
 
       - name: Configure Terraform Backend
         id: backend-config
