--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -370,11 +370,18 @@ jobs:
           terraform output -no-color -raw proxy_instance_zone
 
       - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0.2.1
+        uses: google-github-actions/setup-gcloud@v0
         with:
           project_id: ${{ secrets.GOOGLE_PROJECT }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+
+      - name: increasing_the_tcp_upload_bandwidth
+        id: increasing_the_tcp_upload_bandwidth
+        working-directory: ${{ env.WORK_DIR_PATH }}
+        run: |
+          $(gcloud info --format="value(basic.python_location)") -m pip install numpy
+          export CLOUDSDK_PYTHON_SITEPACKAGES=1
 
       - name: Start SOCKS5 Proxy
         env:
@@ -632,11 +639,18 @@ jobs:
           terraform output -no-color -raw proxy_instance_zone
 
       - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0.2.1
+        uses: google-github-actions/setup-gcloud@v0
         with:
           project_id: ${{ secrets.GOOGLE_PROJECT }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+
+      - name: increasing_the_tcp_upload_bandwidth
+        id: increasing_the_tcp_upload_bandwidth
+        working-directory: ${{ env.WORK_DIR_PATH }}
+        run: |
+          $(gcloud info --format="value(basic.python_location)") -m pip install numpy
+          export CLOUDSDK_PYTHON_SITEPACKAGES=1
 
       - name: Start SOCKS5 Proxy
         env:
