--- a/examples/active-active-proxy/terraform.tfvars.example
+++ b/examples/active-active-proxy/terraform.tfvars.example
@@ -1,27 +1,29 @@
-ca_certificate_secret_id = "ca-certificate"
-ca_private_key_secret_id = "ca-private-key"
-dns_zone_name            = "my.domain.com"
-fqdn                     = "tfe.my.domain.com"
-google                   = {
-                            service_account = "google-service-account"
-                            credentials     = "1a2s3d4f1a2s1q2w4r5t61a2s3d4f1a2s3d4f5g"
-                            project         = "google-project-name"
-                            region          = "us-east1"
-                            zone            = "us-east1-b"
-                           }
-labels                   = {
-                            oktodelete  = "true"
-                            terraform   = "true"
-                            department  = "engineering"
-                            product     = "terraform-enterprise"
-                            repository  = "terraform-google-terraform-enterprise"
-                            description = "active-active-proxy"
-                            environment = "test"
-                           }
-license_file             = "/full/path/to/my/tfe/license.rli"
-node_count               = 2
-ssl_certificate_secret   = "ssl-certificate-secret-name"
-ssl_private_key_secret   = "ssl-private-key-secret-name"
+ca_certificate_secret_id    = "ca-certificate"
+ca_private_key_secret_id    = "ca-private-key"
+dns_zone_name               = "my.domain.com"
+existing_service_account_id = "service-account-name"
+fqdn                        = "tfe.my.domain.com"
+google                      = {
+                               service_account = "google-service-account"
+                               credentials     = "1a2s3d4f1a2s1q2w4r5t61a2s3d4f1a2s3d4f5g"
+                               project         = "google-project-name"
+                               region          = "us-east1"
+                               zone            = "us-east1-b"
+                              }
+labels                      = {
+                               oktodelete  = "true"
+                               terraform   = "true"
+                               department  = "engineering"
+                               product     = "terraform-enterprise"
+                               repository  = "terraform-google-terraform-enterprise"
+                               description = "active-active-proxy"
+                               environment = "test"
+                              }
+license_file                = "/full/path/to/my/tfe/license.rli"
+node_count                  = 2
+ssl_certificate_secret      = "ssl-certificate-secret-name"
+ssl_private_key_secret      = "ssl-private-key-secret-name"
+
 
 
 
