--- a/examples/standalone-mounted/terraform.tfvars.example
+++ b/examples/standalone-mounted/terraform.tfvars.example
@@ -1,5 +1,6 @@
-namespace            = "user-friendly-name"
-fqdn                 = "tfe.my.domain.com"
-ssl_certificate_name = "certificate-name-xxxxxxxxxxxxxxxxxxxxx"
-dns_zone_name        = "my.domain.com"
-license_file         = "/files/license.rli"
+namespace                   = "user-friendly-name"
+existing_service_account_id = "service-account-name"
+fqdn                        = "tfe.my.domain.com"
+ssl_certificate_name        = "certificate-name-xxxxxxxxxxxxxxxxxxxxx"
+dns_zone_name               = "my.domain.com"
+license_file                = "/files/license.rli"
