--- a/.github/workflows/create-jira-issue.yml
+++ b/.github/workflows/create-jira-issue.yml
@@ -3,10 +3,15 @@ name: Create Jira Issue
 on:
   issues:
     types: [opened, closed, deleted, reopened]
+  pull_request_target:
+    types: [opened, closed, reopened]
   issue_comment:
     types: [created]
 
 jobs:
-  create-jira-issue:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/create-jira-issue.yml@main
+  call-workflow:
+    uses: ./.github/workflows/create-jira-issue.yml
+    with:
+      github-team: Terraform-Enterprise
+      project: TFE
     secrets: inherit
